# GILLSONBTCUSD

./: .env.example  .gitignore  AWS_DEPLOYMENT_GUIDE.md  CLAIMS.md  CMakeLists.txt  CONSTITUTIONAL_AUTHORITY_DECLARATION.md  CanonRegistryDG77.77X (1).sol  DAO_Proposal_SGMN.md  Dockerfile  LEGAL_NOTICE.md  LICENSE.txt  LICENSE_NOTICE.txt  MANIFEST_SHA256 (1).txt  MANIFEST_SHA256.txt  NEWT2025_Fortran_v1.0.f90  NavierStokes_Projection_Proof_APA7.docx  Press_OnePager.md  README.md  README_JULES_V0_PLATFORM.md  Step-Command-Wait.csv  The_Valor_Codex_GHOST25.html  UE_Superiority_Audit_NS_Run_v4 (1).json  VALORCHAIN-G_Manifest.txt  VALORCHAIN-G_MerkleProof.json  VALORCHAIN-G_SovereignTx_Attestation.json  YHWH-24_Sovereign_Document_Anchor.json  after_normalized (1).json  agency_coordination_manifest.yaml  bootstrap_codex_ghost25.sh  brand_integrity_monitor.mod  build_hybrid_azrei.sh  divine_kpi_tracker.mod  emergency_federal_deployment.sh  federal_payment_continuity.py  fort_valor_aiplus2e_integrated_v3_0.py  hashpack_build.py  jules_ai_assistant.py  k8s_configmap.yaml  k8s_deployment.yaml  make_qr.py  (+40 more)
HIVE_NFT_Package/: hive_metadata.json  hive_metadata_base64.txt  index.html
ValorAiEngine_Modular_Kit_v1/: LICENSE.txt  MANIFEST.json  SECURITY.md  SHA256SUMS.txt
backend/: database.py  enhancements.py  main.py  monitoring.py  security.py
frontend/: package-lock.json  package.json
scripts/: generate_manifest.py  json_verifier.py  valoraiplus_ascii_cli.d.ts.map  valoraiplus_ascii_cli.ts
src/: epic.ts  newt25.cpp  server.ts  treasury.ts  valoraiplus_azrei_lock.ts  (+2 more)
(+76 files in other folders)
